After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 654455 - Fix build on OpenBSD
Fix build on OpenBSD
Status: RESOLVED FIXED
Product: anjuta
Classification: Applications
Component: plugins: language-support-javascript
git master
Other OpenBSD
: Normal normal
: ---
Assigned To: Maxim Ermilov
Anjuta maintainers
Depends on:
Blocks:
 
 
Reported: 2011-07-12 11:18 UTC by Jasper Lievisse Adriaanse
Modified: 2011-07-12 11:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix build on OpenBSD. (396 bytes, patch)
2011-07-12 11:18 UTC, Jasper Lievisse Adriaanse
accepted-commit_now Details | Review

Description Jasper Lievisse Adriaanse 2011-07-12 11:18:26 UTC
Created attachment 191801 [details] [review]
Fix build on OpenBSD.

socket.h depends on types.h being included. The attached diff fixes the build on OpenBSD by ensuring the correct order. OK to push?
Comment 1 Maxim Ermilov 2011-07-12 11:31:28 UTC
Review of attachment 191801 [details] [review]:

looks good
Comment 2 Jasper Lievisse Adriaanse 2011-07-12 11:33:05 UTC
Thanks!