Fix build on OpenBSD by adjusting include order

https://bugzilla.gnome.org/show_bug.cgi?id=654455